add asserts